[tool.poetry]
name = "keycloak-flask-auth"
version = "0.1.0"
description = ""
authors = ["James Bristow <jbris@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
authlib = "^1.4.0"
fastapi = "^0.115.6"
requests = "^2.32.3"
dash = "^2.18.2"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-bootstrap-components = "^1.6.0"
dash-bootstrap-templates = "^1.3.0"
dash-daq = "^0.5.0"
flask = "<3.1"
flask-login = "^0.6.3"
gunicorn = "^23.0.0"
pyjwt = "^2.10.1"
pytz = "^2024.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
